overflow problem solved

--- a/style.css
+++ b/style.css
@@ -401,13 +401,13 @@ form {
 .customer1,
 .customer2 {
     width: 100%;
-    height: 200px;
+    height: fit-content;
     text-align: center;
     padding: 20px;
     border: 5px solid gainsboro;
     border-style: ridge;
     background-color: azure;
-    overflow: hidden;
+
 }
 
 .customer1,
